# zed-turborepo

./: .dprint.jsonc  .gitignore  .markdownlint.json  .mcp.json  CHANGELOG.md  Cargo.toml  README.md  bacon.toml  clippy.toml  justfile  lefthook.yml  package.json  rust-toolchain.toml  rustfmt.toml  tombi.toml  tsconfig.json  turbo.json
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
crates/turbo-core/: Cargo.toml  package.json
crates/turbo-core/src/: config.rs  discovery.rs  error.rs  lib.rs
crates/turbo-lsp/: Cargo.toml  build.rs  deno.jsonc  doc_links.ts  package.json  validate_doc_links.ts
crates/turbo-lsp/src/: main.rs
crates/turbo-mcp/: Cargo.toml  README.md  package.json
crates/turbo-mcp/src/: main.rs
crates/turbo-zed/: Cargo.toml  extension.toml  package.json
crates/turbo-zed/configuration/: installation_instructions.md
crates/turbo-zed/languages/turbo-json/: config.toml  highlights.scm  outline.scm  runnables.scm  tasks.json
crates/turbo-zed/src/: lib.rs
patches/biome_diagnostics/: Cargo.toml  README.md
patches/biome_diagnostics/examples/: lint.rs
patches/biome_diagnostics/src/: adapters.rs  advice.rs  context.rs  diagnostic.rs  display.rs  display_github.rs  error.rs  lib.rs  location.rs  serde.rs
patches/biome_diagnostics/src/display/: backtrace.rs  diff.rs  frame.rs  message.rs
patches/biome_diagnostics/tests/macros/: category_paren.stderr  description_paren.stderr  unknown_message_attr.stderr
patches/biome_json_syntax/: Cargo.toml
patches/biome_json_syntax/src/: file_source.rs  lib.rs  member_ext.rs  string_ext.rs  syntax_node.rs
patches/biome_parser/: Cargo.toml
patches/biome_parser/src/: diagnostic.rs  event.rs  lexer.rs  lib.rs  marker.rs  parse_lists.rs  parse_recovery.rs  parsed_syntax.rs  prelude.rs  token_set.rs  token_source.rs  tree_sink.rs
patches/biome_rowan/: Cargo.toml
patches/biome_rowan/src/: arc.rs  cursor.rs  file_source.rs  green.rs  lib.rs  raw_language.rs  serde_impls.rs  syntax.rs  syntax_factory.rs  syntax_node_text.rs  token_text.rs  tree_builder.rs
patches/biome_rowan/src/ast/: batch.rs  mod.rs
patches/biome_rowan/src/cursor/: element.rs  node.rs  token.rs  trivia.rs
patches/biome_rowan/src/green/: element.rs  node.rs  node_cache.rs  token.rs  trivia.rs
patches/biome_rowan/src/syntax/: element.rs  node.rs  rewriter.rs  token.rs  trivia.rs
patches/biome_rowan/src/syntax_factory/: parsed_children.rs  raw_syntax.rs
patches/biome_unicode_table/: Cargo.toml
patches/biome_unicode_table/src/: bytes.rs  lib.rs
scripts/: download-lsp.sh  get-turbo-version.ts  turbo-lsp-wrapper.sh
