[workspace]
resolver = "3"
members  = ["crates/*"]

[workspace.package]
version     = "2.8.0+dev"
edition     = "2024"
description = "Tools and instant feedback for your build system"
readme      = "README.md"
repository  = "https://github.com/kjanat/zed-turborepo"
license     = "MIT"
keywords    = ["lsp", "mcp", "turborepo", "vercel", "zed"]
categories  = ["development-tools", "text-editors"]
publish     = false

[workspace.dependencies]
base64            = "0.22"
jsonc-parser      = "0.32.3"
schemars          = "1.2"
serde_json        = "1"
thiserror         = "2"
tower-lsp         = "0.20"
tracing           = "0.1"
turbo-core.path   = "./crates/turbo-core/"
turbo-lsp.path    = "./crates/turbo-lsp/"
turbo-mcp.path    = "./crates/turbo-mcp/"
turbo-zed.path    = "./crates/turbo-zed/"
zed_extension_api = "0.7.0"

[workspace.dependencies.indexmap]
version  = "2"
features = ["serde"]

[workspace.dependencies.reqwest]
version          = "0.12"
default-features = false
features         = ["blocking", "json", "rustls-tls"]

[workspace.dependencies.rmcp]
version  = "1.6"
features = ["macros", "schemars", "server", "transport-io"]

[workspace.dependencies.serde]
version  = "1"
features = ["derive"]

[workspace.dependencies.tokio]
version  = "1"
features = ["fs", "io-std", "macros", "process", "rt-multi-thread", "sync"]

[workspace.dependencies.tracing-subscriber]
version  = "0.3"
features = ["env-filter"]

[workspace.lints.clippy]
cargo_common_metadata        = "allow"
items-after-statements       = "warn"
missing_errors_doc           = "warn"
missing_panics_doc           = "allow"
multiple_crate_versions      = "allow"
must_use_candidate           = "warn"
no-effect-underscore-binding = "warn"
too_many_arguments           = "allow"

[workspace.lints.clippy.cargo]
level    = "deny"
priority = -1

[workspace.lints.clippy.complexity]
level    = "deny"
priority = -1

[workspace.lints.clippy.correctness]
level    = "deny"
priority = -1

[workspace.lints.clippy.nursery]
level    = "warn"
priority = -1

[workspace.lints.clippy.pedantic]
level    = "deny"
priority = -1

[workspace.lints.clippy.perf]
level    = "forbid"
priority = -1

[workspace.lints.clippy.style]
level    = "warn"
priority = -1

[workspace.lints.clippy.suspicious]
level    = "warn"
priority = -1

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.rustdoc]
bare_urls                    = "warn"
broken_intra_doc_links       = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags            = "warn"
missing_crate_level_docs     = "warn"
private_intra_doc_links      = "warn"
redundant_explicit_links     = "warn"
unescaped_backticks          = "warn"

# [profile.dev]
# opt-level = 0
# debug     = 0

# [profile.release]
# lto = "off"

# [profile.release-turborepo]
# inherits = "release"
# strip    = true

# [profile.release-turborepo-lsp]
# inherits  = "release"
# opt-level = "z"
# strip     = true
