[package]
name                 = "turbo-core"
version.workspace    = true
edition.workspace    = true
description          = "Shared core functionality for Turborepo tooling"
readme.workspace     = true
repository.workspace = true
license.workspace    = true
keywords             = ["monorepo", "turborepo", "workspace"]
categories           = ["development-tools"]
publish              = true

[dependencies]
indexmap.workspace     = true
jsonc-parser.workspace = true
serde.workspace        = true
serde_json.workspace   = true
thiserror.workspace    = true
tokio.workspace        = true
tracing.workspace      = true

[lints]
workspace = true
