[package]
name                  = "turbo-lsp"
version.workspace     = true
edition.workspace     = true
description.workspace = true
readme.workspace      = true
repository.workspace  = true
license.workspace     = true
keywords.workspace    = true
categories.workspace  = true
publish.workspace     = true

[[bin]]
name = "turbo-lsp"
path = "src/main.rs"

[dependencies]
tokio.workspace         = true
tower-lsp.workspace     = true
turborepo-lsp.workspace = true

[lints]
workspace = true
