[package]
name                 = "turbo-mcp"
version.workspace    = true
edition.workspace    = true
description          = "MCP (Model Context Protocol) server for Turborepo"
readme.workspace     = true
repository.workspace = true
license.workspace    = true
keywords             = ["ai", "llm", "mcp", "turborepo"]
categories           = ["command-line-utilities", "development-tools"]
publish.workspace    = true

[[bin]]
name = "turbo-mcp"
path = "src/main.rs"

[dependencies]
base64                       = "0.22"
rmcp.workspace               = true
schemars.workspace           = true
serde.workspace              = true
serde_json.workspace         = true
thiserror.workspace          = true
tokio                        = { version = "1", features = ["full", "process"] }
tracing.workspace            = true
tracing-subscriber.workspace = true

[lints]
workspace = true
