[package]
name                 = "turbo-mcp"
version.workspace    = true
edition.workspace    = true
description          = "MCP (Model Context Protocol) server for Turborepo"
readme.workspace     = true
repository.workspace = true
license.workspace    = true
keywords             = ["ai", "llm", "mcp", "turborepo"]
categories           = ["command-line-utilities", "development-tools"]
publish.workspace    = true

[[bin]]
name = "turbo-mcp"
path = "src/main.rs"

[dependencies]
base64.workspace             = true
rmcp.workspace               = true
schemars.workspace           = true
serde.workspace              = true
serde_json.workspace         = true
thiserror.workspace          = true
tokio.workspace              = true
tracing.workspace            = true
tracing-subscriber.workspace = true
turbo-core.workspace         = true

[lints]
workspace = true
