[package]
name                  = "turbo-zed"
version.workspace     = true
edition.workspace     = true
description.workspace = true
readme.workspace      = true
repository.workspace  = true
license.workspace     = true
keywords.workspace    = true
categories.workspace  = true
publish.workspace     = true

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7.0"

[lints]
workspace = true
