[package]
name                  = "turbo-zed"
version.workspace     = true
edition.workspace     = true
description.workspace = true
readme.workspace      = true
repository.workspace  = true
license.workspace     = true
keywords.workspace    = true
categories.workspace  = true
publish.workspace     = true

[lib]
crate-type = ["cdylib"]

[dependencies]
schemars.workspace          = true
serde.workspace             = true
zed_extension_api.workspace = true

[lints]
workspace = true
